feat: Added logic for modals.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/Habitus
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Ruffy@5271939
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
