feat: deploy configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/Habitus
-spring.datasource.username=postgres
-spring.datasource.password=admin
+# Database Configuration - Render PostgreSQL (External URL)
+spring.datasource.url=jdbc:postgresql://dpg-d4ht44emcj7s73c8ft1g-a.virginia-postgres.render.com/pi3_sql_habitus
+spring.datasource.username=pi3_sql_habitus_user
+spring.datasource.password=7fM8uQL0qqAfYN4UtTPijA6j3ElPgPxL
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
