--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Server Configuration
-server.port=8080
+# Server Configuration - Porta dinâmica para Render
+server.port=${PORT:8080}
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
